--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
+# Configure global constant
+# https://create-react-app.dev/docs/adding-custom-environment-variables/
+
+# 默认采取相对路径
 REACT_APP_SERVER_URL=
+# 测试时候可以加入绝对路径
 # REACT_APP_SERVER_URL=https://iptv.liziwl.cn
