--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "semi": "warn"
+    }
   },
   "browserslist": {
     "production": [
