--- a/.env
+++ b/.env
@@ -3,5 +3,7 @@
 
 # 默认采取相对路径，在根目录“/”部署时，留空
 REACT_APP_SERVER_URL=
+# 启用观看人数采集
+VISITOR_COUNTER_ENABLE=0
 # 测试时或在localhost上运行时，设定为绝对路径
 # REACT_APP_SERVER_URL=https://iptv.liziwl.cn
